--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,10 @@
 }
 
 .type::after {
-  content: '|';
+  content: ">";
   animation: cursor 1.1s infinite step-start;
 }
- 
+
 @keyframes cursor {
   50% {
     opacity: 0;
