--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+} */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  padding: 10px;
 }
 
 .fade {
@@ -65,4 +77,38 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.app button {
+  margin: 40px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100vh;
+}
+
+/* .flex-item {
+  flex: 0;
+} */
+
+.myName {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+}
+
+.myName p {
+  font-size: 1em;
+  font-weight: 500;
+  padding: 10px;
 }
